# mv-norm-rs

./: Cargo.toml  README.md
benches/: small_fns.rs
src/: lib.rs  test_utils.rs  tvpack.rs  util.rs
src/batch_bvnd/: mod.rs
