[package]
name = "mv-norm"
version = "0.1.5"
edition = "2024"
authors = ["Chris Beck <beck.ct@gmail.com>"]
keywords = ["stats", "math", "simd", "libm", "no_std"]
categories = ["mathematics"]
description = "Multivariate Normal Distribution functions, CDF etc."
license = "MIT OR Apache-2.0"
repository = "https://github.com/cbeck88/mv-norm-rs"
readme = "README.md"

[features]
default = ["std"]

# Activate `std` within the crate. This may enable some faster compiler-generated
# implementations of `f64::exp`, `f64::sqrt`, etc.
std = ["wide/std"]

[dependencies]
libm = "0.2.11"
wide = { version = "0.7", default-features = false }

[dev-dependencies]
assert-within = "0.1.3"
criterion = { version = "0.4", features = ["html_reports"] }
owens-t = "0.1.4"
rand_pcg = "0.9"
rand = "0.9"

[[bench]]
name = "small_fns"
harness = false
